--- a/fe/package.json
+++ b/fe/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "antd": "^4.8.0",
+    "immer": "^7.0.14",
     "next": "^10.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
