--- a/fe/package.json
+++ b/fe/package.json
@@ -2,11 +2,13 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "antd": "^4.8.0",
+    "axios": "^0.21.0",
     "immer": "^7.0.14",
     "next": "^10.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.28.0",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
