--- a/fe/package.json
+++ b/fe/package.json
@@ -1,13 +1,21 @@
 {
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@types/react-redux": "^7.1.11",
+    "@types/styled-components": "^5.1.4",
+    "amap": "^1.0.7",
     "antd": "^4.8.0",
     "axios": "^0.21.0",
     "immer": "^7.0.14",
     "next": "^10.0.1",
     "react": "^17.0.1",
+    "react-amap": "^1.2.8",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "sass": "^1.28.0",
+    "styled-components": "^5.2.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
