--- a/fe/package.json
+++ b/fe/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "rxjs": "^6.6.3",
     "sass": "^1.28.0",
     "styled-components": "^5.2.1",
     "ts-node": "^9.0.0",
