--- a/fe/package.json
+++ b/fe/package.json
@@ -2,18 +2,21 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@types/react-redux": "^7.1.11",
+    "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.4",
     "amap": "^1.0.7",
     "antd": "^4.8.0",
     "axios": "^0.21.0",
     "immer": "^7.0.14",
     "next": "^10.0.1",
+    "querystring": "^0.2.0",
     "react": "^17.0.1",
     "react-amap": "^1.2.8",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "rxjs": "^6.6.3",
     "sass": "^1.28.0",
     "styled-components": "^5.2.1",
