--- a/fe/package.json
+++ b/fe/package.json
@@ -8,6 +8,8 @@
     "antd": "^4.8.0",
     "axios": "^0.21.0",
     "immer": "^7.0.14",
+    "neovis-ts": "^1.0.8",
+    "neovis.js": "^1.5.0",
     "next": "^10.0.1",
     "querystring": "^0.2.0",
     "react": "^17.0.1",
