--- a/fe/package.json
+++ b/fe/package.json
@@ -23,7 +23,8 @@
     "sass": "^1.28.0",
     "styled-components": "^5.2.1",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "vis-network": "^8.5.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
