--- a/fe/Dockerfile
+++ b/fe/Dockerfile
@@ -1,9 +1,8 @@
 From node:lts-buster as build
-WORKDIR kash_v
-COPY package.json .
+WORKDIR kashv
 RUN yarn config set registry https://registry.npm.taobao.org/
+COPY package.json .
 RUN yarn 
-
 COPY . .
 RUN yarn next build
 CMD yarn next start 
