--- a/fe/Dockerfile
+++ b/fe/Dockerfile
@@ -1,9 +1,4 @@
-From node:lts-buster as build
-WORKDIR kashv
-RUN yarn config set registry https://registry.npm.taobao.org/
-COPY package.json .
-RUN yarn 
-COPY . .
-RUN yarn next build
-CMD yarn next start 
+From nginx:latest
+COPY out /usr/share/nginx/html
+
 
