--- a/fe/package.json
+++ b/fe/package.json
@@ -22,6 +22,8 @@
     "redux-logger": "^3.0.6",
     "rxjs": "^6.6.3",
     "sass": "^1.28.0",
+    "serve": "^11.3.2",
+    "serve-spa": "^1.1.1",
     "styled-components": "^5.2.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
