--- a/fe/package.json
+++ b/fe/package.json
@@ -18,6 +18,8 @@
     "react": "^17.0.1",
     "react-amap": "^1.2.8",
     "react-dom": "^17.0.1",
+    "react-flow": "^1.0.3",
+    "react-flow-renderer": "^9.1.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
