--- a/fe/package.json
+++ b/fe/package.json
@@ -11,7 +11,9 @@
     "echarts": "^5.0.2",
     "echarts-for-react": "^3.0.1",
     "immer": "^7.0.14",
+    "jtopo-in-node": "^1.0.2",
     "localforage": "^1.9.0",
+    "lodash.clonedeep": "^4.5.0",
     "neovis-ts": "^1.0.8",
     "neovis.js": "^1.5.0",
     "next": "^10.0.1",
