--- a/fe/package.json
+++ b/fe/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@types/dom-mediacapture-record": "^1.0.7",
     "@types/react-redux": "^7.1.11",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.4",
@@ -8,6 +9,8 @@
     "amap": "^1.0.7",
     "antd": "^4.8.0",
     "axios": "^0.21.0",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.0.0",
     "echarts": "^5.0.2",
     "echarts-for-react": "^3.0.1",
     "immer": "^7.0.14",
@@ -35,7 +38,9 @@
     "styled-components": "^5.2.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
-    "vis-network": "^8.5.2"
+    "vis-network": "^8.5.2",
+    "webpack": "4.46.0",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
