--- a/fe/package.json
+++ b/fe/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.0",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
+    "draft-js": "^0.11.7",
     "echarts": "^5.0.2",
     "echarts-for-react": "^3.0.1",
     "immer": "^7.0.14",
@@ -27,6 +28,7 @@
     "react-dom": "^17.0.1",
     "react-flow": "^1.0.3",
     "react-flow-renderer": "^9.1.0",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
