--- a/fe/package.json
+++ b/fe/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@antv/g6": "^4.6.4",
     "@types/dom-mediacapture-record": "^1.0.7",
     "@types/react-redux": "^7.1.11",
     "@types/redux-logger": "^3.0.8",
@@ -22,15 +23,15 @@
     "neovis.js": "^1.5.0",
     "next": "^10.0.1",
     "querystring": "^0.2.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-amap": "^1.2.8",
     "react-amap-plugin-heatmap": "0.0.7",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-flow": "^1.0.3",
     "react-flow-renderer": "^9.1.0",
     "react-quill": "^1.3.5",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
+    "react-redux": "^8.0.0",
+    "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "rxjs": "^6.6.3",
